# Gomoku_GUI

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: android-devel.yaml  android-master.yaml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/cz/fontan/gomoku_embryo/: NativeCatch2.kt
app/src/androidTest/java/cz/fontan/gomoku_embryo/espresso/: AboutActivityUITest.kt  MainActivityUITest.kt
app/src/androidTest/java/cz/fontan/gomoku_gui/: ExampleInstrumentedTest.kt  NativeCatch2.kt  NativeLibrary.kt  NativeLibraryTest.kt
app/src/androidTest/java/cz/fontan/gomoku_gui/espresso/: AboutActivityUITest.kt  MainActivityUITest.kt
app/src/caro/res/values/: strings.xml
app/src/freestyle/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/brain/: CMakeLists.txt  board.cpp  board.h  config.h  engine.cpp  engine.h  gameTypes.h  lockedQueue.h  safecast.h
app/src/main/cpp/game/: CMakeLists.txt  config.cpp  safecast.cpp  safecast.h
app/src/main/cpp/test/: AndroidBuffer.cpp  AndroidBuffer.h  CMakeLists.txt  test_config.cpp  test_engine.cpp  test_inputQueue.cpp
app/src/main/cpp/tests/: CMakeLists.txt  test_basic.cpp  test_config.cpp  test_engine.cpp  test_inputQueue.cpp
app/src/main/cpp/tests/catch2/: catch.hpp
app/src/main/cpp/tests/game/: test_config.cpp  test_engine.cpp
app/src/main/cpp/tests/sharedlib/: test_inputQueue.cpp
app/src/main/java/cz/fontan/gomoku_embryo/: AboutActivity.kt  BoardView.kt  CountingIdlingResourceSingleton.kt  InterfaceMainViewModel.kt  MainActivity.kt  NativeInterface.kt  ProfiVersion.kt  SettingsActivity.kt
app/src/main/java/cz/fontan/gomoku_embryo/game/: Game.kt  Move.kt  MoveList.kt
app/src/main/java/cz/fontan/gomoku_embryo/model/: AnswersRepository.kt  ConsumableValue.kt  MainViewModel.kt
app/src/main/java/cz/fontan/gomoku_gui/: AboutActivity.kt  BoardView.kt  CountingIdlingResourceSingleton.kt  InterfaceMain.kt  InterfaceMainViewModel.kt  MainActivity.kt  NativeInterface.kt  ProfiVersion.kt  SettingsActivity.kt  SettingsActivity2.kt  SplashScreenActivity.kt
app/src/main/java/cz/fontan/gomoku_gui/game/: Engine.kt  Game.kt  Move.kt  MoveList.kt
app/src/main/java/cz/fontan/gomoku_gui/model/: AnswersRepository.kt  ConsumableValue.kt  MainViewModel.kt  MainViewModelFactory.kt
app/src/main/res/drawable/: ic_baseline_cancel_24.xml  ic_baseline_redo_24.xml  splash_background.xml
app/src/main/res/layout/: activity_about.xml  activity_main.xml  activity_splash_screen.xml
app/src/main/res/layout-land/: activity_main.xml  activity_splash_screen.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml.xml  themes.xml
app/src/main/res/values-560dpi/: dimens.xml
app/src/main/res/values-hdpi/: dimens.xml
app/src/main/res/values-land-hdpi/: dimens.xml
app/src/main/res/values-land-mdpi/: dimens.xml
app/src/main/res/values-land-xhdpi/: dimens.xml
app/src/main/res/values-land-xxhdpi/: dimens.xml
app/src/main/res/values-land-xxxhdpi/: dimens.xml
app/src/main/res/values-mdpi/: dimens.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-night-v29/: themes.xml
app/src/main/res/values-v29/: styles.xml.xml  themes.xml
app/src/main/res/values-xhdpi/: dimens.xml
app/src/main/res/values-xxhdpi/: dimens.xml
app/src/main/res/xml/: ai_preferences.xml  board_preferences.xml  header_preferences.xml  level_preferences.xml  preferences.xml
app/src/renju/res/values/: strings.xml
app/src/standard/res/values/: strings.xml
app/src/test/java/android/util/: Log.java
app/src/test/java/cz/fontan/gomoku_embryo/game/: GameTest.kt  MoveListTest.kt  MoveTest.kt
app/src/test/java/cz/fontan/gomoku_gui/: ExampleUnitTest.kt
app/src/test/java/cz/fontan/gomoku_gui/game/: GameTest.kt  MoveListTest.kt  MoveTest.kt
gradle/config/: excludeFilter.xml
gradle/wrapper/: gradle-wrapper.properties
iap/: build.gradle  proguard-rules.pro
iap/src/main/: AndroidManifest.xml
iap/src/main/java/com/aemerse/iap/: BillingService.kt  IBillingService.kt  IapConnector.kt  Security.kt
